--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,29 +7,13 @@
     <title>HyperSupportDesk</title>
 </head>
 <body>
-    <h1>Register</h1>
-    <form action="/register" method="POST">
-        <div>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required>
-        </div>
-        <div>
-            <label for="email">Email Address</label>
-            <input type="text" id="email" name="email" required>
-        </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="text" id="password" name="password" required>
-        </div>
-        <button type="submit" onclick="onRegister()">Register</button>
-    </form>
     <p id="output"></p>
     <p>ID / NAME / EMAIL ADDRESS / PASSWORD</p>
     <% users.forEach(function(u) { %>
         <p><%= u.id %> / <%= u.name %> / <%= u.email %> / <%= u.password %></p>
     <% }); %>
-    <!-- <a href="/">Home</a> -->
-    <!-- <a href="/login">Login</a> -->
+    <a href="/register">Register</a><br>
+    <a href="/login">Login</a>
     <script>
 const output = document.getElementById("output");
 
@@ -54,8 +38,7 @@ const onRegister = async function() {
     if (result.error) {
         output.innerHTML = `<strong>Error: ${result.error.routine}</strong>`;
     } else {
-        output.innerHTML += `New user created. Refresh to view.`;
-        console.log(result.newId);
+        output.innerHTML = "New user created. Refresh to view.";
     }
 };
     </script>
