--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 </head>
-
+<body>
 
 <div id="wrapper">
 
@@ -23,25 +23,34 @@
         <h2>Register</h2>
     </header>
 
-    <body>
-
-        <h1>Register</h1>
-        <form action="/register" method="POST">
-            <div>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div>
-                <label for="email">Email Address</label>
-                <input type="text" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="password">Password</label>
-                <input type="text" id="password" name="password" required>
-            </div>
-            <button type="submit">Register</button>
-        </form>
+    <h1>Register</h1>
+    <form action="/register" method="POST">
+        <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div>
+            <label for="email">Email Address</label>
+            <input type="text" id="email" name="email" required>
+        </div>
+        <div>
+            <label for="password">Password</label>
+            <input type="text" id="password" name="password" required>
+        </div>
+        <div>
+            <label for="confirm">Confirm Password</label>
+            <input type="text" id="confirm" name="confirm" required>
+        </div>
+        <button type="submit">Register</button>
+    </form>
+    <a href="/">Home</a>
+    <a href="/login">Login</a>
+    <% if (locals.message) { %>
+        <p id="message"><%= locals.message %></p>
+    <% } %>
 </div>
-</body>
+<script>
 
+</script>
+</body>
 </html>
