[finishes #183871069] Added proper field validation for Registration

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -48,6 +48,12 @@
     <% if (locals.message) { %>
         <p id="message"><%= locals.message %></p>
     <% } %>
+
+    <% if (locals.errors) {
+        for (const [key, value] of Object.entries(locals.errors)) { %>
+            <p id="errors"><%= value %></p>
+        <% }; %>
+    <% } %>
 </div>
 <script>
 
