--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Welcome</title>
+    <title>HSD - Welcome</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,16 +13,18 @@
 <body>
     <div id="wrapper">
 
+        <header>
+            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo" align="left">
+        </header>
+
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
+                <li><a href="/about">About Us</a></li>
                 <li><a href="/login">Login</a></li>
+                <li><a href="/quickFixes">QuickFixes</a></li>
             </ul>
         </nav>
-
-        <header>
-            <h2>Welcome!</h2>
-        </header>
 
         <h2>You successfully logged in!</h2>
     </div>
