--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>HSD - Home</title>
+    <title>HSD - About Us</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,18 +18,21 @@
 
         <nav>
             <ul>
-                <li><a href="/about">About Us</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/register">Register</a></li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/quickFixes">QuickFixes</a></li>
             </ul>
-        </nav><br>
+        </nav><br><br>
 
 
         <main id="hero">
-            <h2>HyperSupportDesk - Home</h2>
-            <p>Welcome to HyperSupportDesk, the place for all of your IT ticketing needs.</p>
-            <p>Feel free to navigate throughout the site.</p>
+            <h2>HyperSupportDesk - About Us</h2><br>
+            <p>We are a local business comprised of four individuals.</p>
+            <p>we are commited to making the lifes of others easier by solving </p>
+            <p>problems that they may have in the workplace that are related to computers.</p>
+            <p>Techologoy is changing everyday, we try our best to solve modern problems so you don't have to</p>
+
         </main>
 
 
