--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Login</title>
+    <title>HSD - Login</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,18 +12,22 @@
 <body>
     <div id="wrapper">
 
+        <header>
+            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo" align="left">
+        </header>
+
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
+                <li><a href="/about">About Us</a></li>
                 <li><a href="/register">Register</a></li>
+                <li><a href="/quickFixes">QuickFixes</a></li>
             </ul>
         </nav>
 
-        <header>
-            <h2>Login</h2>
-        </header>
+        <main id="hero">
+            <h2>HyperSupportDesk - Login</h2><br>
 
-        <h1>Login</h1>
         <form action="/login" method="POST">
             <div>
                 <label for="email">Email Address</label>
@@ -36,6 +40,8 @@
             <button type="submit">Login</button>
         </form>
         <span id="messageBox"></span>
+
+    </main>
         
     </div>
 </body>
