Fixes css on Welcome page

--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -26,7 +26,11 @@
             </ul>
         </nav>
 
-        <h2>You successfully logged in!</h2>
+        <main id="hero">
+            <h2>HyperSupportDesk - Home</h2>
+            <p>You successfully logged in!</p>
+        </main>
+
     </div>
 
 </body>
