--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 /* Main hero content */
-main {
+#hero {
 	display: block;
 	position: relative;
 	min-width: 400px;
@@ -160,7 +160,7 @@ img {
 		font-size: 30px;
 	}
 
-	main {
+	#hero {
 		display: block;
 		position: relative;
 		min-width: 400px;
