Fixed grammer and inaccurate title name.

--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -27,7 +27,7 @@
         </nav>
 
         <main id="hero">
-            <h2>HyperSupportDesk - Home</h2>
+            <h2>HyperSupportDesk - Welcome</h2>
             <p>You successfully logged in!</p>
         </main>
 
