Fixed small grammar mistake.

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -31,7 +31,7 @@
             <p>We are a local business comprised of four individuals.</p>
             <p>we are commited to making the lifes of others easier by solving </p>
             <p>problems that they may have in the workplace that are related to computers.</p>
-            <p>Techologoy is changing everyday, we try our best to solve modern problems so you don't have to.</p>
+            <p>Technology is changing everyday, we try our best to solve modern problems so you don't have to.</p>
 
         </main>
 
