[Finishes #183871102] Fixed error when testing for non-existent email in login form.

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -39,11 +39,14 @@
             </div>
             <button type="submit">Login</button>
         </form>
-        <span id="messageBox"></span>
-
+        <p id="output"></p>
     </main>
-        
     </div>
 </body>
+<script>
+<% if (locals.message) { %>
+output.innerHTML = '<%= locals.message %>';
+<% } %>
+</script>
 
 </html>
