Required /welcome page to be accessed when the user is in a session

--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -27,8 +27,10 @@
         </nav>
 
         <main id="hero">
-            <h2>HyperSupportDesk - Welcome</h2>
+            <h2>HyperSupportDesk - Welcome, <%= user.name %>!</h2>
             <p>You successfully logged in!</p>
+        
+
 
         <p id="output"></p>
         </main>
