--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -21,6 +21,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About Us</a></li>
+                <li><a href="/dashboard">Dashboard</a></li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/quickFixes">QuickFixes</a></li>
             </ul>
