[finishes #183906566] Sends two messages to the screen to tell user to try again.

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -45,8 +45,13 @@
 </body>
 <script>
 <% if (locals.message) { %>
-output.innerHTML = '<%= locals.message %>';
+output.innerHTML = '<%= locals.message %><br>';
 <% } %>
+
+<% if (locals.retry) { %>
+output.innerHTML += '<%= locals.retry %>';
+<% } %>
+
 </script>
 
 </html>
