--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -39,11 +39,11 @@
         </div>
         <div>
             <label for="password">Password</label>
-            <input type="text" id="password" name="password" required>
+            <input type="password" id="password" name="password" required>
         </div>
         <div>
             <label for="confirm">Confirm Password</label>
-            <input type="text" id="confirm" name="confirm" required>
+            <input type="password" id="confirm" name="confirm" required>
         </div>
         <button type="submit">Register</button>
     </form>
