--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -47,6 +47,18 @@
         </div>
         <button type="submit">Register</button>
     </form>
+    <div class="requirements">
+        <section>
+            <h4>Password Requirements:</h4>
+            <ul>
+                <li><p>At least eight characters long.</p></li>
+                <li><p>Contains one or more of the following:</p></li>
+                <li><p>An uppercase letter.</p></li>
+                <li><p>A number.</p></li>
+                <li><p>A special character. (ex: !@#$, etc.)</p></li>
+            </ul>
+        </section>
+    </div>
     <p id="output"></p>
 </div>
 
