--- a/views/pages/quickFixes.ejs
+++ b/views/pages/quickFixes.ejs
@@ -13,20 +13,20 @@
     <div id="wrapper">
 
         <header>
-            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo" align="left">
+            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About Us</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/quickFixes">QuickFixes</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/register">Register</a></li>
-                <li><a href="/login">Login</a></li>
-            </ul>
-        </nav><br>
-
         <main id="hero">
-            <h2>HyperSupportDesk - QuickFixes</h2><br>
+            <h2>HyperSupportDesk - QuickFixes</h2>
 
             <dl>
                 <dt>Computer won't turn on</dt>
