--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -13,21 +13,21 @@
     <div id="wrapper">
 
         <header>
-            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo" align="left">
+            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About Us</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/quickFixes">QuickFixes</a></li>
+                </ul>
+            </nav>
         </header>
-
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/register">Register</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/quickFixes">QuickFixes</a></li>
-            </ul>
-        </nav><br><br>
 
 
         <main id="hero">
-            <h2>HyperSupportDesk - About Us</h2><br>
+            <h2>HyperSupportDesk - About Us</h2>
             <p>We are a local business comprised of four individuals.</p>
             <p>we are commited to making the lifes of others easier by solving </p>
             <p>problems that they may have in the workplace that are related to computers.</p>
