--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -14,20 +14,20 @@
     <div id="wrapper">
 
         <header>
-            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo" align="left">
+            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About Us</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/quickFixes">QuickFixes</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/quickFixes">QuickFixes</a></li>
-            </ul>
-        </nav>
-
         <main id="hero">
-            <h2>HyperSupportDesk - Dashboard</h2><br>
+            <h2>HyperSupportDesk - Dashboard</h2>
 
             <p>You can now create a ticket.</p>
 
@@ -59,9 +59,7 @@
                 <button type="submit">Create Ticket</button>
             </form>
 
-
-
-        <p id="output"></p><br><br><br>
+        <p id="output"></p>
         <p>View Tickets</p>
         <div class="center">
         <table style="width:auto" id="ticket">
@@ -70,8 +68,8 @@
                 <td>TITLE</td>
                 <td>DESCRIPTION</td>
                 <td>AUTHOR</td>
-                <td>PRIORITY</td>
-                <td>STATUS</td>
+                <td class="hideMobile">PRIORITY</td>
+                <td class="hideMobile">STATUS</td>
             </tr>
         <% 
         function unescapeCharacters(string) {
@@ -91,8 +89,8 @@
                 <td><%= t.title %></td>
                 <td><%= t.description %></td>
                 <td><%= unescapeCharacters(t.author) %></td>
-                <td><%= t.priority %></td>
-                <td><%= t.status %></td>
+                <td class="hideMobile"><%= t.priority %></td>
+                <td class="hideMobile"><%= t.status %></td>
             </tr>
         <% }); %>
         </table>
