--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -13,20 +13,20 @@
     <div id="wrapper">
 
         <header>
-            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo" align="left">
+            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About Us</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/quickFixes">QuickFixes</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/register">Register</a></li>
-                <li><a href="/quickFixes">QuickFixes</a></li>
-            </ul>
-        </nav>
-
         <main id="hero">
-            <h2>HyperSupportDesk - Login</h2><br>
+            <h2>HyperSupportDesk - Login</h2>
 
         <form action="/login" method="POST">
             <div>
@@ -38,6 +38,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit">Login</button>
+            <p><a href="/register">Don't have an account?</a></p>
         </form>
         <p id="output"></p>
     </main>
