--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -14,25 +14,21 @@
     <div id="wrapper">
 
         <header>
-            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo" align="left">
+            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About Us</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/quickFixes">QuickFixes</a></li>
+                </ul>
+            </nav>
         </header>
-
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/dashboard">Dashboard</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/quickFixes">QuickFixes</a></li>
-            </ul>
-        </nav>
 
         <main id="hero">
             <h2>HyperSupportDesk - Welcome, <%= user.name %>!</h2>
             <p>You successfully logged in!</p>
-        
-
-
         <p id="output"></p>
         </main>
 
